--- a/pages/homePage/homePage.css
+++ b/pages/homePage/homePage.css
@@ -1,11 +1,21 @@
 body {
-    margin: 0;
-    background-image: url(/norma-saude/imagens/foto-pc.jpg);
+    font-family: 'montserrat', Verdana, Geneva, Tahoma, sans-serif;
+    padding: 0;
+    
     background-size: cover;
 }
+
+.banner-principal {
+    background-color: aliceblue;
+}
+
+header {
+    background-color: transparent;
+}
+
 .social-bar {
     display: flex;
-    justify-content: center;
+    
     
 }
 
@@ -14,6 +24,7 @@ body {
     justify-content: space-between;
     align-items: center; /* Alinhar o logo e o menu verticalmente */
     opacity: 1;
+    align-items: center;
   }
 
 #menu-header {
@@ -25,13 +36,13 @@ body {
 }
 
 .botoes-menu {
-    margin: 0 10px; /* Adicionar uma margem de 10px entre os botões */
+    margin: 0 10px; 
     font-size:17px;
     font-family:Verdana;
     width:180px;
     height:60px;
     border-width:1px;
-    color:rgba(26, 78, 55, 1);
+    color:#1a4e37;
     border-color:rgba(255, 255, 255, 0);
     border-top-left-radius:28px;
     border-top-right-radius:28px;
@@ -41,18 +52,55 @@ body {
   }
 
 #logo-header {
-    height: 150px;
-    width: 150px;
+    height: 140px;
+    width: 140px;
     float: left;
 }
 
 .banner-principal {
    
-    background-size: cover;
     height: 700px;
-    
+    position: relative;
+    background-color: transparent;
+}
+
+.txt-banner-principal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+footer {
+    background-color: #1a4e37;
+    height: 200px;
+    color: white;
+    padding-top: 20px;
+}
+
+.menu-footer {
+    list-style: none;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     
 }
+
+hr {
+    color: #ffff;
+    height: 2px;
+    width: 50px;
+    margin-bottom: 10px;
+}
+
+
+
+
+
+
 
 
 
