--- a/pages/homePage/homePage.css
+++ b/pages/homePage/homePage.css
@@ -160,11 +160,73 @@ header > .container {
     }
 }
 
-.footer > .container {
+footer {
     background-color: #1A4E37;
-    height: 400px;
+    height: 40vh;
+    opacity: 0.9;
 }
-   
 
 
 
+#logo-footer {
+    height: 140px;
+    width: 140px;
+}
+
+.footer-container {
+    margin: 0;
+    color: #fff;
+}
+
+.footer-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 40px;
+}
+
+#footer-address {
+    font-weight: 100;
+}
+
+#contact-card {
+    list-style: none;
+    padding-left: 0;
+    font-weight: 100;
+}
+
+.footernav-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    list-style: none;
+}
+
+.footernav-item {
+    padding-left: 5px;
+}
+
+.center-divider {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footernav-divider {
+    width: 50%;
+    margin-top: 10px;
+}
+
+.social-bar {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-left: 0;
+}
+
+.footer-icons {
+    height: 100px;
+    width: 100px;
+}
