--- a/pages/homePage/homePage.css
+++ b/pages/homePage/homePage.css
@@ -35,6 +35,15 @@ header > .container {
     color: #1A4E37;
     border-color: transparent;
     background-color: transparent;
+    transition: transform 0.3s ease-in-out;
+}
+
+button:hover {
+    background-color: #1A4E37;
+    color: #fff;
+    border-radius: 5%;
+    transform: scale(1.1);
+    
 }
 
 .navbar-collapse {
@@ -181,8 +190,8 @@ footer {
 
 
 #logo-footer {
-    height: 140px;
-    width: 140px;
+    height: 160px;
+    width: 160px;
 }
 
 .footer-container {
@@ -233,12 +242,27 @@ footer {
 .social-bar {
     list-style: none;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-left: 0;
+    align-items: center; /* Alinhar verticalmente os itens da social-bar */
+    padding: 0;
+    justify-content: flex-start;
 }
 
+
 .footer-icons {
-    height: 100px;
-    width: 100px;
+    height: 75px;
+    width: 75px;
+}
+
+@media (max-width: 576px) {
+    .footer {
+        height:50vh;
+        width: auto;
+        opacity: 0.9;
+    }
+
+    #logo-footer {
+        display: none;
+    }
+
+    
 }
